--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "devDependencies": {
-    "babel-preset-es2015": "^6.14.0",
+    "babel-preset-es2015": "^6.3.13",
     "browser-sync": "^2.7.7",
     "connect-history-api-fallback": "^1.1.0",
     "del": "^2.0.2",
@@ -12,7 +12,7 @@
     "gulp-babel": "^6.1.2",
     "gulp-cache": "^0.4.0",
     "gulp-changed": "^1.0.0",
-    "gulp-crisper": "^1.1.0",
+    "gulp-crisper": "^1.0.0",
     "gulp-gh-pages": "^0.5.4",
     "gulp-html-extract": "^0.1.0",
     "gulp-if": "^2.0.0",
@@ -27,6 +27,7 @@
     "gulp-uglify": "^1.2.0",
     "gulp-useref": "^2.1.0",
     "gulp-vulcanize": "^6.0.0",
+    "lazypipe": "^1.0.1",
     "merge-stream": "^1.0.0",
     "require-dir": "^0.3.0",
     "run-sequence": "^1.0.2",
